@@ -4,7 +4,7 @@ Version: 1.1
 Summary: Pure python implementation of DES and TRIPLE DES encryption algorithm
 Home-page: http://twhiteman.netfirms.com/des.html
 Author: Todd Whiteman
-Author-email: twhiteman@users.sourceforge.net
+Author-email: twhitema@gmail.com
 License: UNKNOWN
 Description: UNKNOWN
 Keywords: DES,TRIPLE-DES,ENCRYPTION,ALGORITHM,SECURITY
