@@ -3,10 +3,10 @@
 from distutils.core import setup
 
 setup(name="pyDes",
-      version="1.1",
+      version="1.2",
       description="Pure python implementation of DES and TRIPLE DES encryption algorithm",
       author="Todd Whiteman",
-      author_email="twhiteman@users.sourceforge.net",
+      author_email="twhitema@gmail.com",
       url="http://twhiteman.netfirms.com/des.html",
       platforms=["All"],
       keywords=["DES", "TRIPLE-DES", "ENCRYPTION", "ALGORITHM", "SECURITY"],
