@@ -1,3 +1,7 @@
+** 12th September 2005 **
+ Code: Fixed errors with pyDes.triple_des() CBC mode.
+ Code: Added triple DES CBC checks to the testing procedures in __fulltest__()
+ 
 ** 7 May 2003 **
  Code: pyDes.des and pyDes.triple_des now have an extra optional argument for
  	the encrypt and decrypt methods. This is for the padding character and
